--- a/dataset_info/unitree_g1_five_finger_hand_basket_storage_apple.yml
+++ b/dataset_info/unitree_g1_five_finger_hand_basket_storage_apple.yml
@@ -13,7 +13,7 @@ objects:
 - object_name: table
   level1: furniture
   level2: table
-  level3: test
+  level3: null
   level4: null
   level5: null
 - object_name: apple
